--- a/extension-manifest-v2/_locales/nl/messages.json
+++ b/extension-manifest-v2/_locales/nl/messages.json
@@ -241,6 +241,9 @@
 		"description": "User-facing description for the Audio/Video Player tag category.",
 		"message": "Stelt websites in staat audio en video content te publiceren, te verspreiden en te optimaliseren."
 	},
+	"category_cdn": {
+		"message": "CDN"
+	},
 	"category_comments": {
 		"description": "Ghostery organizes tags by category. This is one of several tag categories.",
 		"message": "Opmerkingen"
@@ -257,6 +260,9 @@
 		"description": "User-facing description for the Customer Interaction tag category.",
 		"message": "Bevat chat, berichten per e-mail, klantenservice en andere interactie-tools."
 	},
+	"category_email": {
+		"message": "E-mail"
+	},
 	"category_essential": {
 		"description": "Ghostery organizes tags by category. This is one of several tag categories.",
 		"message": "Essentieel"
@@ -264,6 +270,15 @@
 	"category_essential_desc": {
 		"description": "User-facing description for the Essential tag category.",
 		"message": "Inclusief tags die cruciaal zijn voor het functioneren van een website zoals tag beheer en privacy kennisgevingen."
+	},
+	"category_extensions": {
+		"message": "Extensies"
+	},
+	"category_hosting": {
+		"message": "Hosting"
+	},
+	"category_misc": {
+		"message": "Diversen"
 	},
 	"category_pornvertising": {
 		"description": "Ghostery organizes tags by category. This is one of several tag categories.",
@@ -673,7 +688,7 @@
 		"message": "Performance"
 	},
 	"panel_detail_learn_more": {
-	  "message": "Meer Weten"
+		"message": "Meer Weten"
 	},
 	"panel_detail_history_title": {
 		"message": "Geschiedenis"
@@ -897,8 +912,8 @@
 	"settings_share_human_web": {
 		"message": "Human Web data te delen"
 	},
-  	"settings_allow_abtests": {
-	  	"message": "Deelnemen aan A/B-tests"
+	"settings_allow_abtests": {
+		"message": "Deelnemen aan A/B-tests"
 	},
 	"settings_signin_create_header": {
 		"message": "Inloggen / Account Aanmaken"
@@ -987,8 +1002,8 @@
 	"settings_human_web_tooltip": {
 		"message": "Ghostery implementeert nu standaard het Human Web, een revolutionaire technologie dat de wijsheid van de menigte gebruikt om internet meer privé te maken"
 	},
-  	"settings_abtests_tooltip": {
-	  	"message": "Door deel te nemen aan willekeurige A/B-tests help je Ghostery te begrijpen welke versie van een nieuwe lay-out of functie gebruikers zoals jij liever zien."
+	"settings_abtests_tooltip": {
+		"message": "Door deel te nemen aan willekeurige A/B-tests help je Ghostery te begrijpen welke versie van een nieuwe lay-out of functie gebruikers zoals jij liever zien."
 	},
 	"settings_opt_in": {
 		"message": "Wel/niet meedoen"
@@ -1290,7 +1305,7 @@
 		"message": "Aangepaste instelling voltooid"
 	},
 	"hub_home_plus_upgrade_text": {
-	  	"message": "Kies voor meer dan standaardprivacy. Upgrade naar Ghostery Plus om toegang te krijgen tot onze krachtige privébrowser, functie voor privé zoeken en geavanceerde trackeranalyse."
+		"message": "Kies voor meer dan standaardprivacy. Upgrade naar Ghostery Plus om toegang te krijgen tot onze krachtige privébrowser, functie voor privé zoeken en geavanceerde trackeranalyse."
 	},
 	"hub_home_plus_upgrade_button_text": {
 		"message": "Upgrade nu"
@@ -1556,10 +1571,10 @@
 	"hub_tutorial_antisuite_antitracking_description": {
 		"message": "Verwijder datapunten waarmee websites jou kunnen identificeren."
 	},
-	"hub_products_page_title" : {
+	"hub_products_page_title": {
 		"message": "Ghostery Hub - Probeer andere Ghostery-producten"
 	},
-	"hub_products_header_title" : {
+	"hub_products_header_title": {
 		"message": "Browse slimmer met Ghostery-producten!"
 	},
 	"hub_products_header_description": {
@@ -1590,7 +1605,7 @@
 		"message": "Upgraden naar Ghostery Plus"
 	},
 	"hub_supporter_header_description": {
-	  "message": "Kies voor meer dan standaardprivacy en ontgrendel onze volledige productsuite!"
+		"message": "Kies voor meer dan standaardprivacy en ontgrendel onze volledige productsuite!"
 	},
 	"hub_supporter_price": {
 		"message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ per maand",
@@ -1609,26 +1624,26 @@
 			}
 		}
 	},
-  	"hub_supporter_perk_themes_and_more_title": {
-	  "message": "Aangepaste thema's en meer"
+	"hub_supporter_perk_themes_and_more_title": {
+		"message": "Aangepaste thema's en meer"
 	},
-  	"hub_supporter_perk_themes_and_more_description": {
-	  "message": "Pas de Ghostery-kleuren aan: probeer onze Leaf-, Palm- en Dark Blue-thema's!"
+	"hub_supporter_perk_themes_and_more_description": {
+		"message": "Pas de Ghostery-kleuren aan: probeer onze Leaf-, Palm- en Dark Blue-thema's!"
 	},
 	"hub_supporter_perk_themes_description": {
 		"message": "Ghostery-kleuren aanpassen - test ons Dark Blue-thema!"
 	},
-  	"hub_supporter_perk_analytics_title": {
-	  "message": "Geavanceerde trackeranalyse"
+	"hub_supporter_perk_analytics_title": {
+		"message": "Geavanceerde trackeranalyse"
 	},
-  	"hub_supporter_perk_analytics_description": {
-	  "message": "Krijg toegang tot Ghostery Insights, ons dashboard met realtime trackerinformatie"
+	"hub_supporter_perk_analytics_description": {
+		"message": "Krijg toegang tot Ghostery Insights, ons dashboard met realtime trackerinformatie"
 	},
-  	"hub_supporter_perk_dawn_and_glow_title": {
-	  "message": "Privé browsen en zoeken"
+	"hub_supporter_perk_dawn_and_glow_title": {
+		"message": "Privé browsen en zoeken"
 	},
 	"hub_supporter_perk_dawn_and_glow_description": {
-	  "message": "Download Ghostery Dawn en Glow, onze krachtige privébrowser met ingebouwde zoekmachine"
+		"message": "Download Ghostery Dawn en Glow, onze krachtige privébrowser met ingebouwde zoekmachine"
 	},
 	"hub_supporter_manifesto": {
 		"message": "Upgrade naar Ghostery Plus om onze volledige productsuite te ontgrendelen! Voor slechts &#36;4.99 per maand krijg je toegang tot een krachtige privébrowser met ingebouwde functie voor privé zoeken, geavanceerde trackeranalyses, en andere speciale extra's."
@@ -1729,11 +1744,11 @@
 	"subscription_themes_title": {
 		"message": "Thema's"
 	},
-	"priority_support" : {
+	"priority_support": {
 		"message": "Priority-ondersteuning"
 	},
 	"subscribe_pitch": {
-	  "message": "Upgrade naar Ghostery Plus om onze volledige productsuite te ontgrendelen! Voor slechts &#36;4.99 per maand krijg je toegang tot een krachtige privébrowser met ingebouwde functie voor privé zoeken, geavanceerde trackeranalyses, en andere speciale extra's."
+		"message": "Upgrade naar Ghostery Plus om onze volledige productsuite te ontgrendelen! Voor slechts &#36;4.99 per maand krijg je toegang tot een krachtige privébrowser met ingebouwde functie voor privé zoeken, geavanceerde trackeranalyses, en andere speciale extra's."
 	},
 	"subscribe_pitch_spring": {
 		"message": "Vind je het leuk wat wij doen? Steun ons en ontgrendel nieuwe thema's voor de lente, persoonlijke trackinginzichten en andere speciale extra's door naar Ghostery Plus te upgraden!"
@@ -1783,7 +1798,7 @@
 	"subscription_themes_tooltip": {
 		"message": "Wijzig kleurschema van Ghostery!"
 	},
-	"subscription_charge_date" : {
+	"subscription_charge_date": {
 		"message": "Volgende betaaldag"
 	},
 	"subscription_expired": {
@@ -2070,8 +2085,8 @@
 	"spring_is_here": {
 		"message": "Het is lente!"
 	},
-  	"full_coverage_protection_promise": {
-	  "message": "Profiteer van volledige dekking voor alle browsers en apps op je apparaat"
+	"full_coverage_protection_promise": {
+		"message": "Profiteer van volledige dekking voor alle browsers en apps op je apparaat"
 	},
 	"system_wide_tracker_and_ad_blocking": {
 		"message": "Systeembrede blokkering van trackers en reclame"
@@ -2100,25 +2115,55 @@
 	"too_many_failed_logins_text": {
 		"message": "Te veel mislukte inlogpogingen. Probeer het over één uur opnieuw."
 	},
-  	"choose_your_default_search": {
+	"choose_your_default_search": {
 		"message": "Je standaard zoekmachine selecteren"
 	},
-  	"pick_a_default_search_engine": {
-	  "message": "Kies een standaard zoekmachine voor al je zoekopdrachten."
+	"pick_a_default_search_engine": {
+		"message": "Kies een standaard zoekmachine voor al je zoekopdrachten."
 	},
-  "plus_subscriber_perk_insights" : {
-	  "message": "Ghostery Insights (geavanceerde trackeranalyse)"
+	"plus_subscriber_perk_insights": {
+		"message": "Ghostery Insights (geavanceerde trackeranalyse)"
 	},
-	"plus_subscriber_perk_dawn" : {
-	  "message": "Ghostery Dawn (privébrowser)"
+	"plus_subscriber_perk_dawn": {
+		"message": "Ghostery Dawn (privébrowser)"
 	},
-	"plus_subscriber_perk_glow" : {
-	  "message": "Ghostery Glow (privé en reclamevrij zoeken)"
+	"plus_subscriber_perk_glow": {
+		"message": "Ghostery Glow (privé en reclamevrij zoeken)"
 	},
-	"plus_subscriber_perk_custom_color_themes" : {
-	  "message": "Aangepaste kleurthema's"
+	"plus_subscriber_perk_custom_color_themes": {
+		"message": "Aangepaste kleurthema's"
 	},
-	"plus_subscriber_perk_priority_support" : {
-	  "message": "Priority-ondersteuning"
+	"plus_subscriber_perk_priority_support": {
+		"message": "Priority-ondersteuning"
+	},
+	"privacy_protection": {
+		"message": "Privacybescherming op deze website"
+	},
+	"block_toggle_ads": {
+		"message": "Blokkeer Ads"
+	},
+	"block_toggle_tracking": {
+		"message": "Blokkeer Trackers"
+	},
+	"block_toggle_annoyances": {
+		"message": "Blokkeer Ergernissen"
+	},
+	"statistical_report": {
+		"message": "Statistisch Verslag"
+	},
+	"subscribe": {
+		"message": "Aanmelden"
+	},
+	"back": {
+		"message": "Terug"
+	},
+	"trackers_detected": {
+		"message": "Gedetecteerd"
+	},
+	"tracker_details": {
+		"message": "Tracker Details"
+	},
+	"options_tracker_wheel_disabled": {
+		"message": "Tracker Wheel in browserwerkbalk uitschakelen"
 	}
 }
